--- a/src/main/resources/templates/privacy.html
+++ b/src/main/resources/templates/privacy.html
@@ -165,10 +165,10 @@
 				(주)아나바다는 개인정보에 대한 의견수렴 및 불만처리를 담당하는 개인정보 관리담당자를 지정하고 있습니다.
 				<ul>
 					<li><strong>개인정보 관리 담당자</strong></li>
-					<li>성 명 : 김범진</li>
-					<li>직 책 : 조장</li>
-					<li>전화번호 : 010-4152-3998</li>
-					<li>E-mail : advensod@gmail.com</li>
+					<li>성 명 : 장치영</li>
+					<li>직 책 : 대표</li>
+					<li>전화번호 : 010-2313-0228</li>
+					<li>E-mail : clduddkwk@naver.com</li>
 				</ul>
 			</dd>
 		</dl>
