--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -146,3 +146,51 @@
 	 width: 100%;
 	 height: 150px;
 }
+.pagination {
+	margin-top: 20px;
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    justify-content: center;
+}
+.addressBox {
+	display: flex;
+    flex-direction: row;
+    height: 50px;
+    margin-bottom: 20px; 
+}
+.address_title {
+	display: block;
+    font-size: 32px;
+    font-weight: 600;
+    letter-spacing: -0.6px;
+    text-align: center;
+    color: #212529;
+    margin: auto;
+}
+.addressList {
+	
+}
+.select_box {
+    border-radius: 3px;
+    padding: 10px;
+    background-color: #fff;
+    border: 1px solid #e8ebed;
+    line-height: 17px;
+    text-align: center;
+}
+.select_box:after {
+    border: 1px solid #9ea4aa;
+    border-width: 0 1px 1px 0;
+    content: "";
+    display: inline-block;
+    height: 8px;
+    padding: 0;
+    pointer-events: none;
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: rotate(45deg);
+    width: 8px;
+    color: #454c53;
+}
