--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-
+pre {
+	font-family: monhwa;
+}
 .product-section {
     width: 65%;
     margin: 50px auto 0px;
@@ -235,4 +237,131 @@ div.gradient-wrap {
 	font-size: 20px;
     font-weight: 700;
     color: #000;
+}
+
+.comment {
+	border: 1px solid #eeeeef;
+    margin-top: 50px;
+}
+.commentCnt {
+	padding-left: 10px;
+    padding-top: 8px;
+}
+.comment_left {
+	display: table-cell;
+    position: relative;
+    padding-right: 30px;
+}
+
+.user_info {
+	display: flex;
+}
+.comment_row {
+	display: table;
+    overflow: hidden;
+    width: 100%;
+    padding: 15px 15px 15px;
+    border-bottom: 1px solid #eeeeef;
+}
+
+.comment_content {
+	overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    width: 573px;
+    max-height: 60px;
+    margin-top: 10px;
+    font-size: 15px;
+    line-height: 20px;
+    color: #666;
+    word-wrap: break-word;
+}
+.user_img {
+	width: 32px;
+    height: 32px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    float: left;
+    margin-right: 10px;
+    font-size: 17px;
+    font-weight: 600;
+}
+.user_nickname {
+	float: left;
+	display: block;
+    height: 16px;
+    margin-bottom: 3px;
+    font-size: 14px;
+    line-height: 16px;
+}
+.comment_time {
+	font-size: 11px;
+    color: #959595;
+    line-height: 13px;
+    display: block;
+}
+
+.comment_right {
+    position: relative;
+    width: 75px;
+    vertical-align: top;
+    display: table-cell;
+}
+.comment_img_info {
+	width: 100%;
+}
+
+.comment_info {
+	margin-top: 16px;
+}
+
+.comment_img {
+	width: 100%;
+	height: 150px;
+}
+.flex_row {
+	display: flex;
+    flex-direction: column;
+}
+.commentBox {
+	height: 44px;
+	background-color: #f2f2f2;
+}
+.modihd {
+	display: none;
+}
+.comment_update {
+    border: none;
+    border-radius: 20px;
+    margin-left: 14px;
+    font-size: 17px;
+}
+.introduce {
+	font-size: 15px;
+}
+
+.commentCk {
+	float: left;
+    display: block;
+    height: 16px;
+    font-size: 13px;
+    line-height: 12px;
+    border: 2px solid beige;
+    border-radius: 22px;
+    background: beige;
+    margin-left: 6px;
+}
+.comment_modify {
+	margin-right: 20px;
+}
+.submit-comment {
+	border: none;
+    border-radius: 20px;
+    margin-left: 14px;
+    font-size: 19px;
+}
+.comment_register {
+	padding: initial;
 }
