--- a/src/main/resources/static/css/message.css
+++ b/src/main/resources/static/css/message.css
@@ -11,21 +11,6 @@ li {
 	list-style: none;
 }
 
-a, abbr, acronym, address, applet, article, aside, audio, b, big,
-	blockquote, body, canvas, caption, center, cite, code, dd, del, details,
-	dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form,
-	header, hgroup, html, i, iframe, img, input, ins, kbd, label, legend,
-	li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp,
-	section, select, small, span, strike, strong, sub, summary, sup, table,
-	tbody, td, textarea, tfoot, th, thead, time, tr, tt, u, ul, var, video
-	{
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-weight: 400;
-	color: #333;
-}
-
 .content .main_area {
 	width: 980px;
 	margin: 0 auto;
@@ -242,23 +227,13 @@ a {
 	overflow: auto;
 	height:  415px;
 	border-bottom: 1px solid #ebebeb;
-	margin-top: 18px;
-	
 }
-
-.content .main_area:after {
-	display: block;
-	clear: both;
-	content: "";
-}
-
 .chat_footer {
 	height: 70px;
 	padding: 15px 15px 15px 21px;
 	display: flex;
     flex-flow: row;
 }
-
 .chat_footer .chat_input {
 	width: 560px;
 	overflow: auto;
@@ -269,11 +244,9 @@ a {
 	font-size: 15px;
 	float: left;
 }
-
 .chat_input[contenteditable=true] {
 	position: relative;
 }
-
 .chat_input[contenteditable=true]:empty:after {
 	content: attr(placeholder);
 	color: #b4b4b4;
@@ -281,25 +254,16 @@ a {
 	font-size: 15px;
 	display: block;
 }
-
 .chat_footer button {
 	color: #fff;
-	background-color: #ff80ab;
+	background-color: #198754;
 	border-radius: 3px;
 	font-size: 15px;
 	font-weight: 700;
-	padding: 10px 0;
 	text-align: center;
 	width: 78px;
+	height: 38px;
 }
-
-button {
-	border: none;
-	background: none;
-	outline: 0;
-	padding: 0;
-}
-
 .right_div {
 	margin-bottom: 1em;
     text-align: left;
@@ -325,13 +289,11 @@ button {
     right: 0;
     display: inline-flex;
 }
-
 .mail_id_content {
 	margin-top: 0.5em;
     margin-left: 0.5em;
 	font-size: 0.9em;
 }
-
 .mail_left_date_content {
 	font-size: -1.5em;
 	position: relative;
@@ -356,9 +318,6 @@ button {
 	display: -webkit-box;
 	-webkit-line-clamp: 1;
 	-webkit-box-orient: vertical;
-}
-.chat_div {
-	margin-top: 12px;
 }
 .mail_right_content {
 	background-color: #ebebeb;
@@ -419,7 +378,7 @@ button {
 	padding: 2em;
 	margin-bottom: 1em;
 }
-.S-mcP {
+.messageBox {
     background-color: #fff;
     background-color: rgba(var(--d87,255,255,255),1);
     border-bottom: 1px solid zdbdbdb;
@@ -436,14 +395,13 @@ button {
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
     height: 60px;
     padding: 0px 11px;
     width: 100%;
     z-index: 2;
 }
-.AjEzM {
+.messageContainor {
 	display:flex;
 	flex-direction:row;
     -webkit-box-align: center;
@@ -472,7 +430,6 @@ button {
     border-bottom: 1px solid #ebebeb;
 }
 .user_nickname {
-	width: 60%;
 	text-align: center;
 }
 .product_name {
@@ -484,4 +441,22 @@ button {
     display: -webkit-box;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
+}
+.span_point {
+	font-size: 30px;
+	font-weight: 700;
+}
+.CompleteBox {
+	flex: 3;
+}
+.Complete {
+	float: right;
+	color: #fff;
+    background-color: #198754;
+    border-radius: 3px;
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+    width: 78px;
+    height: 38px;
 }
